@@ -1,3 +1,10 @@
+2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>
+
+	* qm/test/execution_engine.py (ExecutionEngine._RunTests): Fix
+	documentation mistake.  Fix typo in comment.
+	(ExecutionEngine._Trace): Remove extraneous comma in parameter
+	list.
+
 2003-01-03  Mark Mitchell  <mark@codesourcery.com>
 
 	* qm/test/database.py (ItemDescriptor.__init__): Do not set
@@ -302,7 +309,7 @@
 
 	* qm/fields.py (BooleanField): New class.
 	* qm/xmlutil.py (ParseError): Remove.
-	(load_xml_file): Revise docoumentation.
+	(load_xml_file): Revise documentation.
 	(load_xml): Likewise.
 	* qm/test/cmdline.py (__ExecuteSummarize): Handle XML parse errors
 	gracefully.
